load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files(["fake_bazel.sh"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

sh_library(
    name = "shared_fns",
    srcs = ["shared_fns.sh"],
    visibility = ["//tests:__subpackages__"],
)

# MARK: - Binary Declarations

sh_binary(
    name = "find_child_workspace_packages",
    srcs = ["find_child_workspace_packages.sh"],
    visibility = ["//visibility:public"],
    deps = [
        ":shared_fns",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:arrays",
        "@cgrindel_bazel_starlib//shlib/lib:fail",
        "@cgrindel_bazel_starlib//shlib/lib:files",
    ],
)

sh_binary(
    name = "update_deleted_packages",
    srcs = ["update_deleted_packages.sh"],
    data = [
        ":find_child_workspace_packages",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:arrays",
        "@cgrindel_bazel_starlib//shlib/lib:files",
        "@cgrindel_bazel_starlib//shlib/lib:messages",
        "@cgrindel_bazel_starlib//shlib/lib:paths",
    ],
)

sh_binary(
    name = "create_scratch_dir",
    srcs = ["create_scratch_dir.sh"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:fail",
        "@cgrindel_bazel_starlib//shlib/lib:paths",
    ],
)

sh_binary(
    name = "remove_child_wksp_bazel_symlinks",
    srcs = ["remove_child_wksp_bazel_symlinks.sh"],
    visibility = ["//visibility:public"],
    deps = [
        ":shared_fns",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:fail",
        "@cgrindel_bazel_starlib//shlib/lib:files",
    ],
)
