load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//:bazel_versions.bzl", "CURRENT_BAZEL_VERSION")
load(
    "//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
)

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "e2e_test_runner",
    testonly = True,
    srcs = ["e2e_test_runner.sh"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

# This test exists to be run as part of the BCR presubmit.
bazel_integration_test(
    name = "e2e_test",
    bazel_binaries = bazel_binaries,
    bazel_version = CURRENT_BAZEL_VERSION,
    # Override the default tags. Let this run with bazel test //...
    tags = [],
    test_runner = ":e2e_test_runner",
)
