load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
)

bzlformat_pkg(name = "bzlformat")

bzl_library(
    name = "bazel_binary_utils",
    srcs = ["bazel_binary_utils.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//bazel_integration_test/private:no_deps_utils",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

sh_binary(
    name = "e2e_test_runner",
    testonly = True,
    srcs = ["e2e_test_runner.sh"],
    deps = [
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_starlib//shlib/lib:assertions",
    ],
)

# This test exists to be run as part of the BCR presubmit.
bazel_integration_test(
    name = "e2e_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    # Override the default tags. Let this run with bazel test //...
    tags = [],
    test_runner = ":e2e_test_runner",
)
