load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

package(default_visibility = ["//bazel_integration_test:__subpackages__"])

bzlformat_pkg(name = "bzlformat")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)

exports_files([
    "default_test_runner.sh",
    "integration_test_wrapper.sh",
])

bzl_library(
    name = "integration_test_utils",
    srcs = ["integration_test_utils.bzl"],
    deps = [
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "default_test_runner",
    srcs = ["default_test_runner.bzl"],
    deps = [
        ":integration_test_utils",
        "@cgrindel_bazel_starlib//shlib/rules:execute_binary",
    ],
)

bzl_library(
    name = "bazel_integration_test",
    srcs = ["bazel_integration_test.bzl"],
    deps = [
        ":integration_test_utils",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//rules:select_file",
    ],
)
