load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_python//python:defs.bzl", "py_library")

bzlformat_pkg(name = "bzlformat")

py_library(
    name = "test_base",
    testonly = True,
    srcs = ["test_base.py"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
