load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "@contrib_rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "integration_test_utils",
)

bzl_library(
    name = "bazel_versions",
    srcs = ["bazel_versions.bzl"],
    visibility = ["//:__subpackages__"],
)

test_suite(
    name = "all_integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = [
        "//integration_tests:workspace_test",
    ],
    visibility = ["//:__subpackages__"],
)

# MARK: - Xcode Version

# GH050: Fix compilation error when built on Xcode 13.3.

xcode_version(
    name = "version13_2_1_13C100",
    aliases = [
        "13.2",
        "13.2.1",
        "13.2.1.13C100",
        "13C100",
    ],
    default_ios_sdk_version = "15.2",
    default_macos_sdk_version = "12.1",
    default_tvos_sdk_version = "15.2",
    default_watchos_sdk_version = "8.3",
    version = "13.2.1.13C100",
)

xcode_config(
    name = "host_xcodes",
    default = ":version13_2_1_13C100",
    versions = [":version13_2_1_13C100"],
)
