module(
    name = "custom_test_runner_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_bazel_integration_test",
    path = "../..",
)

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.14.8")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(
    name = "gazelle",
    version = "0.29.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(
    name = "rules_go",
    version = "0.38.1",
    dev_dependency = True,
    repo_name = "io_bazel_rules_go",
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//bazel_integration_test:extensions.bzl",
    "bazel_binaries",
)
bazel_binaries.download(version_file = "//:.bazelversion")
bazel_binaries.download(version = "6.0.0")
use_repo(
    bazel_binaries,
    "build_bazel_bazel_.bazelversion",
    "build_bazel_bazel_6_0_0",
)

non_module_deps = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(non_module_deps, "cgrindel_swift_bazel")

swift_deps = use_extension("//:swift_deps.bzl", "swift_dependencies_ext")
use_repo(
    swift_deps,
    "swiftpkg_shellout",
    "swiftpkg_swift_argument_parser",
)
