module(
    name = "custom_test_runner_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "rules_bazel_integration_test",
    path = "../..",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.23.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(
    name = "gazelle",
    version = "0.41.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_swift",
    version = "2.4.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "rules_swift_package_manager", version = "0.44.0")

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_.bazelversion",
)

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_shellout",
    "swiftpkg_swift_argument_parser",
)
# swift_deps END
