module(
    name = "custom_test_runner_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.0.0",
    dev_dependency = True,
)
local_path_override(
    module_name = "rules_bazel_integration_test",
    path = "../..",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.30.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_swift",
    version = "3.4.2",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "rules_swift_package_manager", version = "1.12.0")
bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.2.2",
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_.bazelversion",
)

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_shellout",
    "swiftpkg_swift_argument_parser",
)
# swift_deps END
