load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load(
    "@cgrindel_bazel_starlib//updatesrc:defs.bzl",
    "updatesrc_update_all",
)

bzlformat_pkg()

# Define a runnable target to execute all of the updatesrc_update targets
# that are defined in your workspace.
updatesrc_update_all(
    name = "update_all",
)

# This exists to ensure that the hidden file is copied by create_scratch_dir.sh
genrule(
    name = "copy_hidden_file",
    srcs = [".hidden_file"],
    outs = ["copy_of_hidden_file"],
    cmd = "cat $(location .hidden_file) > $@",
)

build_test(
    name = "copy_hidden_file_test",
    targets = [
        ":copy_hidden_file",
    ],
)
