module(
    name = "simple_example",
    version = "0.0.0",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.14.9")

# TODO(chuck): FIX ME!
local_path_override(
    module_name = "cgrindel_bazel_starlib",
    path = "/Users/chuck/code/cgrindel/bazel-starlib/main",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
