load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//:bazel_versions.bzl", "CURRENT_BAZEL_VERSION")
load(
    "//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "default_test_runner",
)

bzlformat_pkg(name = "bzlformat")

default_test_runner(
    name = "test_runner",
)

# MARK: - Default Env Inherit

bazel_integration_test(
    name = "default_env_inherit_int_test",
    bazel_version = CURRENT_BAZEL_VERSION,
    test_runner = ":test_runner",
    workspace_path = "workspace",
)

genquery(
    name = "default_env_inherit_query",
    testonly = True,
    expression = """\
//tests/params_tests:default_env_inherit_int_test\
""",
    opts = ["--output=build"],
    scope = ["//tests/params_tests:default_env_inherit_int_test"],
)

# TODO: Add additional bazel integration test targets with env_inherit.
# bazel_integration_test(
#     name = "override_env_inherit_test",
#     bazel_version = CURRENT_BAZEL_VERSION,
#     test_runner = ":test_runner",
#     workspace_path = "workspace",
# )

# TODO: Add additional bazel integration test targets with additional_env_inherit.
