load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//bazel_integration_test:defs.bzl", "integration_test_utils")
load("//bazel_integration_test/py:bazel_py_integration_tests.bzl", "bazel_py_integration_tests")

bzlformat_pkg(name = "bzlformat")

bazel_py_integration_tests(
    name = "test_base_test",
    srcs = ["test_base_test.py"],
    bazel_versions = bazel_binaries.versions.all,
)

# MARK: - Test Suite

test_suite(
    name = "integration_tests",
    # If you don't apply the test tags to the test suite, the test suite will
    # be found when `bazel test //...` is executed.
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "test_base_test",
        bazel_binaries.versions.all,
    ),
    visibility = ["//:__subpackages__"],
)
