load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
)

# This Bazel integration test uses the custom test runner from this workspace to execute Bazel
# commands in the `workspace` child workspace.
bazel_integration_test(
    # If the test is named XXX_test, the macro will assume that the child workspace is named XXX.
    # One can specify a different location by using the workspace_path attribute.
    name = "workspace_test",
    bazel_binaries = bazel_binaries,
    # Specify the version of Bazel to use to execute the test.
    bazel_version = bazel_binaries.versions.current,
    # This is a reference to the custom test runner.
    test_runner = "//Sources/CustomTestRunner",
    visibility = ["//:__subpackages__"],
    workspace_path = "workspace",
)
