load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
)

# This Bazel integration test uses the custom test runner from this workspace to execute Bazel
# commands in the `workspace` child workspace.
bazel_integration_test(
    # If the test is named XXX_test, the macro will assume that the child workspace is named XXX.
    # One can specify a different location by using the workspace_path attribute.
    name = "workspace_test",
    bazel_binaries = bazel_binaries,
    # Specify the version of Bazel to use to execute the test.
    bazel_version = bazel_binaries.versions.current,
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS + [
        # Avoid file permssion error when using disk and repository cache after
        # 7.0.0rc2 upgrade.
        # https://github.com/bazelbuild/bazel/issues/19908
        "no-sandbox",
    ],
    # This is a reference to the custom test runner.
    test_runner = "//Sources/CustomTestRunner",
    visibility = ["//:__subpackages__"],
    workspace_path = "workspace",
)
