load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")

bzl_library(
    name = "deps",
    srcs = ["deps.bzl"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//mockascript/private:mockascript_library",
    ],
)

bzlformat_pkg()
